# ZyrpERP

./: .env.example  .gitignore  .secrets.baseline  README.md
backend/: README.md  pyproject.toml
backend/accounts/: models.py  security.py  serializers.py  throttles.py  tokens.py  urls.py
backend/audit/: admin.py  models.py  services.py
backend/catalog/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/config/: log_context.py  log_filters.py  middleware.py  mixins.py  observability.py  tenant_middleware.py  urls.py  views.py
backend/core/: celery.py
backend/financial/: models.py  permissions.py  services.py  urls.py  views.py
backend/fiscal/: admin.py  apps.py  models.py  ocr.py  ports.py  serializers.py  services.py  tasks.py  urls.py  views.py  webhook.py
backend/inventory/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/monitoring/: middleware.py  urls.py  views.py
backend/outbox/: admin.py  handlers.py  models.py  services.py
backend/payments/: models.py  serializers.py  services.py  urls.py  views.py
backend/people/: models.py  serializers.py  services.py  urls.py  views.py
backend/purchasing/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/sales/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/tenancy/: admin.py  authentication.py  capabilities.py  context.py  managers.py  models.py  permissions.py  serializers.py  serializers_access.py  urls.py  views.py  views_access.py
backend/tests/: conftest.py  test_access_management_api.py  test_accounts.py  test_audit.py  test_auth_security.py  test_capabilities.py  test_cashflow_projection.py  test_catalog_api.py  test_catalog_api_hardening.py  test_catalog_capabilities.py  test_catalog_conversions.py  test_catalog_models.py  test_catalog_observability.py  test_catalog_pricing.py  test_catalog_rls.py  test_config_utilities.py  test_database_roles.py  test_device_auth_api.py  test_financial_models.py  test_financial_services.py  test_fiscal_adapter.py  test_fiscal_api.py  test_fiscal_outbox.py  test_fiscal_receipt_validation.py  test_fiscal_services.py  test_inventory_api_closure.py  test_inventory_api_hardening.py  test_inventory_capabilities.py  test_inventory_closure.py  (+45 more)
(+276 files in other folders)
